Jan 13 2003  3.1.0  Added more packet sanitizing.  Most invalid management
                     frames now intercepted, data frames still problematic.
Jan 12 2003  3.1.0  Fixed stupid word-transposition in default config, should
                     be channelsplit not splitchannels.
Jan 10 2003  3.1.0  Started implementing wsp100 snmp calls in new framework
                    Added sanity checks to ExecSysCmd() calls in pcapsource
                    Added coloring of decloaked networks to panelfront
Jan 09 2003  3.1.0  Merged patch from Bjarke Pedersen for different sounds for
                     new wepped networks
Jan 07 2003  3.1.0  Fixed more wep keysize bugs
Jan 04 2003  3.1.0  Changed probe network autogrouping to not group when there
                     is only 1 probe network
Jan 03 2003  3.1.0  Fixed nullproberesp alert
                    Fixed segfault if acpi/ACAD/ not found
                    Merged patch from Million adding more ACPI support
                    Merged patch from Million with numerous variable init
                     and other memory checks to kismet_server
                    Added more defaults to ap_manuf file
                    Added type counts and percentages to gpsmap legends
Jan 02 2004  3.1.0  Fixed association of probe nets
                    Fixed weirdness with now-defunct quality bar
                    Fixed map legends w/ no network colors and no powerbar
Jan 01 2004  3.1.0  Added legend drawing to GPSMap, finally
                    Various speedups inside gpsmap
                    Readme updates
                    Fixed legend drawing eating one map file
                    Significant speed boosts to gpsmap filtering
                    Changed algo.h sort() calls to stable_sort(). This seems
                     to be a bug in some gcc versions that causes segfaults.
                    Moved most of gpsmaps messages into the 'verbose' setting
                     (gpsmap -v ... )