@@ -1,5 +1,10 @@
 Jan 13 2003  3.1.0  Added more packet sanitizing.  Most invalid management
                      frames now intercepted, data frames still problematic.
+                    Merged gpsmap patches from Andrew Knutsen to add labeling
+                     of manufacturer and beacon info, avoid overlapping network
+                     labels, and scripts in the extras directory to generate
+                     multiple maps of an area and to merge the IEEE 
+                     manufacturer list into the Kismet manuf file.
 Jan 12 2003  3.1.0  Fixed stupid word-transposition in default config, should
                      be channelsplit not splitchannels.
 Jan 10 2003  3.1.0  Started implementing wsp100 snmp calls in new framework
